[package]
name = "rust-storage-bench"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "worker"
path = "src/worker/main.rs"

# [target.'cfg(not(target_env = "msvc"))'.dependencies]
# jemallocator = "0.3.2"

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
# bloodstone = { package = "sled", version = "1.0.0-alpha.118" }
sled = { version = "0.34.7", features = ["compression"] }
fjall = { version = "0.5.0", path = "../fjall" }
nanoid = "0.4.0"
rand = "0.8.5"
sysinfo = { version = "0.30.1", features = ["serde"] }
serde = "1.0.193"
serde_json = "1.0.108"
fs_extra = "1.3.0"
env_logger = "0.10.1"
log = { version = "0.4.20", features = ["release_max_level_trace"] }
persy = { version = "1.4.7", features = ["background_ops"] }
jammdb = "0.11.0"
zipf = "7.0.1"
redb = "1.4.0"
nebari = "0.5.5"
